Assertion saving while fullscreen #98185

Closed
opened 2022-05-17 07:10:09 +02:00 by Campbell Barton · 4 comments

Blender currently asserts when saving a file.

  • 48c4c409b83c6ab8c00b64efb087cf0eb9bb8597 (master) fails.
  • a2dacefb46363cac5abd7d0d5dcbf9ff2764bef7 (blender-v3.2-release), works.

The following steps assert:

Load blender, factory startup.

  • Ctrl-Space: Make the 3D view full-screen
  • File -> Save As -> (Save the file, overwriting the existing file).

Blender asserts.

BLI_assert failed: source/blender/windowmanager/intern/wm_event_system.c:2624, wm_handler_fileselect_do(), at '!CTX_wm_region(C) || (CTX_wm_region(C) == handler->context.region)'

NOTE: Saving using Ctrl-Alt-S doesn't assert.

Blender currently asserts when saving a file. - `48c4c409b83c6ab8c00b64efb087cf0eb9bb8597` (master) fails. - `a2dacefb46363cac5abd7d0d5dcbf9ff2764bef7` (blender-v3.2-release), works. The following steps assert: Load blender, factory startup. - Ctrl-Space: Make the 3D view full-screen - File -> Save As -> (Save the file, overwriting the existing file). Blender asserts. ``` BLI_assert failed: source/blender/windowmanager/intern/wm_event_system.c:2624, wm_handler_fileselect_do(), at '!CTX_wm_region(C) || (CTX_wm_region(C) == handler->context.region)' ``` NOTE: Saving using Ctrl-Alt-S doesn't assert.
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by d55e1caa75

This issue was referenced by d55e1caa75c97ad6f77f17202ca6a7fa0623b853

This issue was referenced by 1a740c2541

This issue was referenced by 1a740c25417f735d6a778e2c6339356d48eed2ea
Author
Owner

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2022-05-17 07:19:40 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98185
No description provided.