Fix T98185: Assertion saving while fullscreen

When saving from the menu the region was not set,
causing the last region in `area->regionbase` to be used
as the region was assigned before comparison.